# SocketServer

./: CMakeLists.txt
include/: Client.h  Message.h  Server.h
src/: CMakeLists.txt  Client.cpp  Server.cpp
